adds themes and categories table to results section

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -28,6 +28,7 @@
 \usepackage{booktabs}
 \usepackage{colortbl}
 \usepackage{xltabular}
+\usepackage{multirow}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{graphics}
