--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -108,5 +108,6 @@
 \acro{der}[DER]{distributed energy resource}
 \acro{mes}[MES]{Minimum Equity Standard}
 \acro{rec}[REC]{renewable energy credit}
+\acro{bem}[BEM]{building energy model}
 
 
